Tap header is optional